--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -11,6 +11,7 @@
 @import "_orders.scss";
 @import "_dashboard.scss";
 @import "../../pretixbase/scss/webfont.scss";
+@import "../../colorpicker/bootstrap-colorpicker.scss";
 
 footer {
     text-align: center;
@@ -254,5 +255,20 @@ body.loading #wrapper {
     border: 0 !important;
     padding: 0 !important;
     display: block !important;
+}
 
+.colorpicker-2x .colorpicker-saturation {
+    width: 200px;
+    height: 200px;
+}
+
+.colorpicker-2x .colorpicker-hue,
+.colorpicker-2x .colorpicker-alpha {
+    width: 30px;
+    height: 200px;
+}
+
+.colorpicker-2x .colorpicker-color,
+.colorpicker-2x .colorpicker-color div {
+    height: 30px;
 }
