--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -22,16 +22,18 @@
 {% endblock %}
 {% block page %}
     <div class="page-header">
-        <h1 class="pull-left">
+        <div class="pull-left">
             {% if event_logo %}
                 <a href="{% eventurl event "presale:event.index" %}" title="{{ event.name }}">
                     <img src="{{ event_logo|thumbnail_url:'logo' }}" alt="{{ event.name }}" class="event-logo" />
                 </a>
             {% else %}
-                <a href="{% eventurl event "presale:event.index" %}">{{ event.name }}</a>
-                <small>{{ event.get_date_range_display }}</small>
+                <h1>
+                    <a href="{% eventurl event "presale:event.index" %}">{{ event.name }}</a>
+                    <small>{{ event.get_date_range_display }}</small>
+                </h1>
             {% endif %}
-        </h1>
+        </div>
         <div class="pull-right loginbox">
             {% if request.event.settings.locales|length > 1 %}
                 <div class="locales">
