--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -28,7 +28,8 @@
                     <div class="col-md-4 col-xs-12">
                         <form method="post" data-asynctask action="{% eventurl request.event "presale:event.cart.clear" %}">
                             {% csrf_token %}
-                            <button class="btn btn-block btn-default btn-lg" type="submit"><i class="fa fa-close"></i> {% trans "Empty cart" %}</button>
+                            <button class="btn btn-block btn-default btn-lg" type="submit">
+                                <i class="fa fa-close"></i> {% trans "Empty cart" %}</button>
                         </form>
                     </div>
                     <div class="col-md-4 col-md-offset-4 col-xs-12">
@@ -66,15 +67,57 @@
     {% endif %}
     <div>
         {% if frontpage_text %}
-        <div>
-            {{ frontpage_text|rich_text }}
-        </div>
+            <div>
+                {{ frontpage_text|rich_text }}
+            </div>
         {% endif %}
-        <p class="text-right">
-            <a href="{% eventurl event "presale:event.ical.download" %}" class="btn btn-link btn-xs">
-                <i class="fa fa-calendar"></i> {% trans "Add to Calendar" %}
-            </a>
-        </p>
+
+
+        {% if event.location %}
+            <div class="info-row">
+                <span class="fa fa-map-marker fa-fw"></span>
+                <p>
+                    {{ event.location|linebreaksbr }}
+                </p>
+            </div>
+        {% endif %}
+        {% if event.settings.show_times or event.date_admission %}
+            <div class="info-row">
+                <span class="fa fa-clock-o fa-fw"></span>
+                <p>
+                    {% if event.settings.show_times %}
+                        {% blocktrans trimmed with time=event.date_from|date:"TIME_FORMAT" %}
+                            Begin: {{ time }}
+                        {% endblocktrans %}
+                    {% endif %}
+                    {% if event.date_admission and event.settings.show_times %}
+                        <br>
+                    {% endif %}
+                    {% if event.date_admission %}
+                        {% if event.date_admission|date:"SHORT_DATE_FORMAT" == event.date_from|date:"SHORT_DATE_FORMAT" %}
+                            {% blocktrans trimmed with time=event.date_admission|date:"TIME_FORMAT" %}
+                                Admission: {{ time }}
+                            {% endblocktrans %}
+                        {% else %}
+                            {% blocktrans trimmed with datetime=event.date_admission|date:"SHORT_DATETIME_FORMAT" %}
+                                Admission: {{ datetime }}
+                            {% endblocktrans %}
+                        {% endif %}
+                    {% endif %}
+                    <br>
+                    <a href="{% eventurl event "presale:event.ical.download" %}">
+                        <i class="fa fa-calendar"></i> {% trans "Add to Calendar" %}
+                    </a>
+                </p>
+            </div>
+        {% else %}
+            <p class="text-right">
+                <a href="{% eventurl event "presale:event.ical.download" %}" class="btn-xs">
+                    <i class="fa fa-calendar"></i> {% trans "Add to Calendar" %}
+                </a>
+            </p>
+        {% endif %}
+
     </div>
 
     {% eventsignal event "pretix.presale.signals.front_page_top" %}
@@ -112,11 +155,13 @@
                                             </div>
                                         {% endif %}
                                         {% if item.min_per_order %}
-                                            <p><small>
-                                                {% blocktrans trimmed with num=item.min_per_order %}
-                                                    minimum amount to order: {{ num }}
-                                                {% endblocktrans %}
-                                            </small></p>
+                                            <p>
+                                                <small>
+                                                    {% blocktrans trimmed with num=item.min_per_order %}
+                                                        minimum amount to order: {{ num }}
+                                                    {% endblocktrans %}
+                                                </small>
+                                            </p>
                                         {% endif %}
                                     </div>
                                     <div class="col-md-2 col-xs-6 price">
@@ -222,11 +267,13 @@
                                         {% include "pretixpresale/event/fragment_quota_left.html" with avail=item.cached_availability %}
                                     {% endif %}
                                     {% if item.min_per_order %}
-                                        <p><small>
-                                            {% blocktrans trimmed with num=item.min_per_order %}
-                                                minimum amount to order: {{ num }}
-                                            {% endblocktrans %}
-                                        </small></p>
+                                        <p>
+                                            <small>
+                                                {% blocktrans trimmed with num=item.min_per_order %}
+                                                    minimum amount to order: {{ num }}
+                                                {% endblocktrans %}
+                                            </small>
+                                        </p>
                                     {% endif %}
                                 </div>
                                 <div class="col-md-2 col-xs-6 price">
