--- a/src/pretix/static/pretixpresale/scss/main.scss
+++ b/src/pretix/static/pretixpresale/scss/main.scss
@@ -116,6 +116,22 @@ body.loading .container {
     -webkit-transition: opacity .5s ease-in-out;
 }
 
+.info-row {
+    & > .fa {
+        font-size: 26px;
+        color: $brand-primary;
+        float: left;
+        margin-top: 3px;
+    }
+    p {
+        min-height: 30px;
+        margin-left: 40px;
+    }
+    p:first-child {
+        margin-top: 0;
+    }
+}
+
 @media (min-width: $screen-md-min) {
     .thank-you {
         min-height: 170px;
