Admission date and time in editor

--- a/src/pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html
+++ b/src/pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html
@@ -267,7 +267,10 @@
                                 <option value="attendee_name">{% trans "Attendee name" %}</option>
                                 <option value="event_name">{% trans "Event name" %}</option>
                                 <option value="event_date">{% trans "Event date" %}</option>
+                                <option value="event_begin">{% trans "Event begin date and time" %}</option>
                                 <option value="event_begin_time">{% trans "Event begin time" %}</option>
+                                <option value="event_admission">{% trans "Event admission date and time" %}</option>
+                                <option value="event_admission_time">{% trans "Event admission time" %}</option>
                                 <option value="event_location">{% trans "Event location" %}</option>
                                 <option value="other">{% trans "Other…" %}</option>
                             </select>
