--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -106,7 +106,7 @@
                     {% endif %}
                     <br>
                     <a href="{% eventurl event "presale:event.ical.download" %}">
-                        <i class="fa fa-calendar"></i> {% trans "Add to Calendar" %}
+                        {% trans "Add to Calendar" %}
                     </a>
                 </p>
             </div>
