Removed `aria-*` attributes
Per https://github.com/pretix/pretix/pull/490#discussion_r116165115,
removes `aria` attributes from sub-tutorial.
Works on pretix/pretix#443, member of pretix/pretix#490.

--- a/src/pretix/control/templates/pretixcontrol/user/2fa_confirm_totp.html
+++ b/src/pretix/control/templates/pretixcontrol/user/2fa_confirm_totp.html
@@ -39,7 +39,7 @@
             {% trans "Add a new account to the app by scanning the following barcode:" %}
             <div class="qrcode-canvas" data-qrdata="#qrdata"></div>
             <p>
-                <a data-toggle="collapse" href="#no_scan" aria-expanded="false" aria-controls="collapseExample">
+                <a data-toggle="collapse" href="#no_scan">
                     {% trans "Can't scan the barcode?" %}
                 </a>
             </p>
