Pretix capitalization issue
Per https://github.com/pretix/pretix/pull/490#discussion_r116165193,
fixes an issue with capitalization of pretix.
Works on pretix/pretix#443, member of pretix/pretix#490.

--- a/src/pretix/control/templates/pretixcontrol/user/2fa_confirm_totp.html
+++ b/src/pretix/control/templates/pretixcontrol/user/2fa_confirm_totp.html
@@ -49,7 +49,7 @@
                         {% trans "Use the \"provide a key\" option of your authenticator app." %}
                     </li>
                     <li>
-                        {% trans "In \"Account name\", type your login name for Pretix." %}
+                        {% trans "In \"Account name\", type your login name for pretix." %}
                     </li>
                     <li>
                         {% trans "In \"Secret\"/\"Account Key\", enter the following code:" %}
