--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -81,42 +81,34 @@
                 </p>
             </div>
         {% endif %}
-        {% if event.settings.show_times or event.date_admission %}
-            <div class="info-row">
-                <span class="fa fa-clock-o fa-fw"></span>
-                <p>
-                    {% if event.settings.show_times %}
-                        {% blocktrans trimmed with time=event.date_from|date:"TIME_FORMAT" %}
-                            Begin: {{ time }}
+        <div class="info-row">
+            <span class="fa fa-clock-o fa-fw"></span>
+            <p>
+                {{ event.get_date_range_display }}
+                {% if event.settings.show_times %}
+                    <br>
+                    {% blocktrans trimmed with time=event.date_from|date:"TIME_FORMAT" %}
+                        Begin: {{ time }}
+                    {% endblocktrans %}
+                {% endif %}
+                {% if event.date_admission %}
+                    <br>
+                    {% if event.date_admission|date:"SHORT_DATE_FORMAT" == event.date_from|date:"SHORT_DATE_FORMAT" %}
+                        {% blocktrans trimmed with time=event.date_admission|date:"TIME_FORMAT" %}
+                            Admission: {{ time }}
+                        {% endblocktrans %}
+                    {% else %}
+                        {% blocktrans trimmed with datetime=event.date_admission|date:"SHORT_DATETIME_FORMAT" %}
+                            Admission: {{ datetime }}
                         {% endblocktrans %}
                     {% endif %}
-                    {% if event.date_admission and event.settings.show_times %}
-                        <br>
-                    {% endif %}
-                    {% if event.date_admission %}
-                        {% if event.date_admission|date:"SHORT_DATE_FORMAT" == event.date_from|date:"SHORT_DATE_FORMAT" %}
-                            {% blocktrans trimmed with time=event.date_admission|date:"TIME_FORMAT" %}
-                                Admission: {{ time }}
-                            {% endblocktrans %}
-                        {% else %}
-                            {% blocktrans trimmed with datetime=event.date_admission|date:"SHORT_DATETIME_FORMAT" %}
-                                Admission: {{ datetime }}
-                            {% endblocktrans %}
-                        {% endif %}
-                    {% endif %}
-                    <br>
-                    <a href="{% eventurl event "presale:event.ical.download" %}">
-                        {% trans "Add to Calendar" %}
-                    </a>
-                </p>
-            </div>
-        {% else %}
-            <p class="text-right">
-                <a href="{% eventurl event "presale:event.ical.download" %}" class="btn-xs">
-                    <i class="fa fa-calendar"></i> {% trans "Add to Calendar" %}
+                {% endif %}
+                <br>
+                <a href="{% eventurl event "presale:event.ical.download" %}">
+                    {% trans "Add to Calendar" %}
                 </a>
             </p>
-        {% endif %}
+        </div>
 
     </div>
 
