added a missing string and translation for it

--- a/src/pretix/presale/templates/pretixpresale/organizers/index.html
+++ b/src/pretix/presale/templates/pretixpresale/organizers/index.html
@@ -10,7 +10,7 @@
 	{% endif %}
     </div>	
     {% if "old" in request.GET %}
-        <h3>Past events</h3>
+        <h3>{% trans "Past events" %}</h3>
         <p>
             <small><a href="?">{% trans "Show upcoming" %}</a></small>
         </p>
