--- a/src/pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html
+++ b/src/pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html
@@ -272,6 +272,7 @@
                                 <option value="event_admission">{% trans "Event admission date and time" %}</option>
                                 <option value="event_admission_time">{% trans "Event admission time" %}</option>
                                 <option value="event_location">{% trans "Event location" %}</option>
+                                <option value="addons">{% trans "List of Add-Ons" %}</option>
                                 <option value="other">{% trans "Other…" %}</option>
                             </select>
                             <textarea type="text" value="" class="input-block-level form-control"
