Add support for image icons in navigation

--- a/src/pretix/control/templates/pretixcontrol/event/base.html
+++ b/src/pretix/control/templates/pretixcontrol/event/base.html
@@ -1,5 +1,6 @@
 {% extends "pretixcontrol/base.html" %}
 {% load i18n %}
+{% load staticfiles %}
 {% block title %}{{ request.event.name }}{% endblock %}
 
 {% block nav %}
@@ -112,7 +113,9 @@
         <li>
             <a href="{{ nav.url }}" {% if nav.active %}class="active"{% endif %}
             {% if nav.children %}class="has-children"{% endif %}>
-                {% if nav.icon %}
+                {% if nav.icon and "." in nav.icon %}
+                    <img src="{% static nav.icon %}" class="fa-img">
+                {% elif nav.icon %}
                     <i class="fa fa-{{ nav.icon }} fa-fw"></i>
                 {% endif %}
                 {{ nav.label }}
