--- a/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
@@ -111,6 +111,12 @@
                             <dt>{% trans "E-mail address" %}</dt>
                             <dd>{{ request.session.email }}</dd>
                         </dl>
+                        {% for l, v in contact_info %}
+                            <dl class="dl-horizontal">
+                                <dt>{{ l }}</dt>
+                                <dd>{{ v }}</dd>
+                            </dl>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
