--- a/src/pretix/presale/templates/pretixpresale/base.html
+++ b/src/pretix/presale/templates/pretixpresale/base.html
@@ -8,7 +8,7 @@
 <head>
     <title>{% block thetitle %}{% endblock %}</title>
     {% compress css %}
-        <link rel="stylesheet" type="text/css" href="{% static "lightbox/css/lightbox.css" %}" />
+        <link rel="stylesheet" type="text/x-scss" href="{% static "lightbox/css/lightbox.scss" %}" />
     {% endcompress %}
     {% if css_file %}
         <link rel="stylesheet" type="text/css" href="{{ css_file }}"/>
