Fix failing tests

--- a/src/pretix/control/templates/pretixcontrol/events/create_basics.html
+++ b/src/pretix/control/templates/pretixcontrol/events/create_basics.html
@@ -18,7 +18,7 @@
         {% bootstrap_field form.locale layout="horizontal" %}
         {% bootstrap_field form.timezone layout="horizontal" %}
     </fieldset>
-    {% if form.presale_tart %}
+    {% if form.presale_start %}
         <fieldset>
             <legend>{% trans "Timeline" %}</legend>
             {% bootstrap_field form.presale_start layout="horizontal" %}
