--- a/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
+++ b/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
@@ -13,6 +13,9 @@
             {% if line.voucher %}
                 <br /><span class="fa fa-tags"></span> {% trans "Voucher code used:" %} {{ line.voucher.code }}
             {% endif %}
+            {% if line.subevent %}
+                <br /><span class="fa fa-calendar"></span> {{ line.subevent.name }} &middot; {{ line.subevent.get_date_range_display }}
+            {% endif %}
 
 
             {% if line.has_questions %}
@@ -83,6 +86,7 @@
                 {% if editable %}
                 <form action="{% eventurl event "presale:event.cart.add" %}"
                     method="post" data-asynctask>
+                    <input type="hidden" name="subevent" value="{{ line.subevent_id|default_if_none:"" }}" />
                     {% csrf_token %}
                     {% if line.variation %}
                         <input type="hidden" name="variation_{{ line.item.id }}_{{ line.variation.id }}"
