--- a/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/control.html
+++ b/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/control.html
@@ -14,9 +14,15 @@
         <dd>{{ payment_info.reference }}</dd>
     </dl>
 {% else %}
-    <p>{% blocktrans trimmed %}
-        This order has been planned to be paid via bank transfer, but no payment has been received yet.
-    {% endblocktrans %}</p>
+    {% if order.status == "p" %}
+        <p>{% blocktrans trimmed %}
+            This order has been marked as paid via bank transfer manually.
+        {% endblocktrans %}</p>
+    {% else %}
+        <p>{% blocktrans trimmed %}
+            This order has been planned to be paid via bank transfer, but no payment has been received yet.
+        {% endblocktrans %}</p>
+    {% endif %}
     <dl class="dl-horizontal">
         <dt>{% trans "Reference code" %}</dt>
         <dd>{{ order.full_code }}</dd>
