--- a/src/pretix/control/templates/pretixcontrol/base.html
+++ b/src/pretix/control/templates/pretixcontrol/base.html
@@ -232,7 +232,7 @@
                     {% if messages %}
                         {% for message in messages %}
                             <div class="alert {{ message.tags }}">
-                                {{ message }}
+                                {{ message|linebreaksbr }}
                             </div>
                         {% endfor %}
                     {% endif %}
