--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -46,6 +46,13 @@ nav.navbar .danger, nav.navbar .danger:hover, nav.navbar .danger:active {
 .nav-pills {
     margin-bottom: 10px;
 }
+
+#button-shop {
+    padding: 15px;
+    min-height: 50px;
+    border: none;
+}
+
 .product-row {
     padding: 10px 0;
 
