--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -51,6 +51,9 @@ nav.navbar .danger, nav.navbar .danger:hover, nav.navbar .danger:active {
     padding: 15px;
     min-height: 50px;
     border: none;
+    &:hover, &:active {
+        text-decoration: none;
+    }
 }
 
 .product-row {
