--- a/src/pretix/control/templates/pretixcontrol/base.html
+++ b/src/pretix/control/templates/pretixcontrol/base.html
@@ -67,7 +67,8 @@
                 <ul class="nav navbar-nav navbar-top-links navbar-left hidden-xs">
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-calendar"></i>
-                            {{ request.event }} <span class="caret"></span></a>
+                            <span class="event-name">{{ request.event }}</span>
+                            <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="{% url "control:events" %}">{% trans "Events overview" %}</a></li>
                             {% regroup request.user.events_cache by organizer as event_list %}
