Display full name in event typeahead

--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -306,7 +306,7 @@ body.loading #wrapper {
     width: 300px;
 }
 .event-dropdown, .mobile-event-dropdown {
-    .event-name {
+    .event-name-full {
         display: block;
     }
     .event-daterange, .event-organizer {
