--- a/src/pretix/control/templates/pretixcontrol/vouchers/bulk.html
+++ b/src/pretix/control/templates/pretixcontrol/vouchers/bulk.html
@@ -10,8 +10,11 @@
         {% bootstrap_form_errors form %}
         <fieldset>
             <legend>{% trans "Voucher codes" %}</legend>
-            <div class="form-group">
+            <div class="form-group form-inline">
                 <div class="col-md-7 col-sm-12 col-md-offset-3">
+                    <input type="text" class="form-control input-xs"
+                           id="voucher-bulk-codes-prefix"
+                           placeholder="{% trans "Prefix (optional)" %}">
                     <div class="input-group">
                         <input type="number" class="form-control input-xs"
                                id="voucher-bulk-codes-num"
