--- a/src/pretix/static/pretixpresale/scss/_event.scss
+++ b/src/pretix/static/pretixpresale/scss/_event.scss
@@ -128,3 +128,47 @@ section.front-page {
         margin-bottom: 15px;
     }
 }
+
+.subevent-list {
+    background-color: $body-bg;
+    max-height: 100px;
+    overflow-y: auto;
+
+    transition-property: height;
+	transition-duration: .5s;
+	transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+
+    .row {
+        margin: 0;
+    }
+    a.subevent-row {
+        display: block;
+        color: $text-color;
+    }
+    a.subevent-row:nth-child(2n) {
+        background-color: $gray-lighter;
+    }
+    a.subevent-row:hover {
+        text-decoration: none;
+        background-color: darken($gray-lighter, 10%);
+    }
+    .subevent-row .row > div {
+        padding: 5px;
+        min-height: 35px; /* label height */
+        vertical-align: middle;
+    }
+}
+.subevent-toggle {
+    padding: 5px;
+    text-align: center;
+    background-color: darken($gray-lighter, 30%);
+    display: none;
+    color: white;
+    cursor: pointer;
+
+    &:hover {
+        color: white;
+        text-decoration: none;
+        background-color: darken($gray-lighter, 40%);
+    }
+}
