Organizer-level bank import

--- a/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_assign.html
+++ b/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_assign.html
@@ -1,4 +1,4 @@
-{% extends "pretixplugins/banktransfer/import_base.html" %}
+{% extends basetpl %}
 {% load i18n %}
 {% block inner %}
     <p>{% blocktrans trimmed %}
